--- a/package.json
+++ b/package.json
@@ -2,21 +2,56 @@
   "name": "@portfolio-git-hub-v1/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "preinstall": "npx only-allow pnpm",
+    "generate": "nx g @template-hex/testgenerator:generator",
+    "generatetest": "nx g @template-hex/testgenerator:generator --dry-run",
+    "dockerstart": "docker start backendtm",
+    "run-backend": "pnpm nx serve w-n-backend",
+    "run-frontend": "pnpm nx serve frontendtm",
+    "build": "pnpm nx build",
+    "test": "pnpm nx test",
+    "db:migrate-tm": "pnpm dotenv-flow -p apps/backendtm -- pnpm prisma migrate dev --schema=apps/backendtm/prisma/schema.prisma",
+    "db:deploy-tm": "pnpm dotenv-flow -p apps/backendtm -- pnpm prisma migrate deploy --schema=apps/backendtm/prisma/schema.prisma",
+    "db:generate-tm": "pnpm dotenv-flow -p apps/backendtm -- pnpm prisma generate --schema=apps/backendtm/prisma/schema.prisma"
+  },
   "private": true,
   "dependencies": {
-    "@nrwl/nx-plugin": "^19.8.4"
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.2",
+    "@nrwl/nx-plugin": "^19.8.4",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
+    "@nx/eslint": "20.5.0",
+    "@nx/eslint-plugin": "20.5.0",
+    "@nx/jest": "20.5.0",
     "@nx/js": "20.5.0",
     "@nx/nest": "^20.5.0",
     "@nx/node": "^20.5.0",
+    "@nx/web": "20.5.0",
+    "@nx/webpack": "20.5.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/jest": "^29.5.12",
+    "@types/node": "~18.16.9",
+    "eslint": "^9.8.0",
+    "eslint-config-prettier": "^9.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "nx": "20.5.0",
     "prettier": "^2.6.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~5.7.2"
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.19.0",
+    "webpack-cli": "^5.1.4"
   }
 }
