--- a/apps/w-n-backend/project.json
+++ b/apps/w-n-backend/project.json
@@ -41,8 +41,10 @@
       }
     },
     "test": {
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "passWithNoTests": true
+        "jestConfig": "apps/w-n-backend/jest.config.ts"
       }
     }
   }
