--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nx/node": "^20.5.0",
     "@nx/web": "20.5.0",
     "@nx/webpack": "20.5.0",
+    "@nxrocks/nx-spring-boot": "^10.2.6",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
