--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,4 @@
 {
-    "eslint.validate": [
-      "json"
-    ],
-    "editor.formatOnSave": true
-  }
+  "eslint.validate": ["json"],
+  "editor.formatOnSave": true
+}
