--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "@nrwl/nx-plugin": "^19.8.4",
+    "@nx/devkit": "20.5.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
   },
@@ -39,6 +40,7 @@
     "@nx/webpack": "20.5.0",
     "@nxrocks/nx-spring-boot": "^10.2.6",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
@@ -47,6 +49,7 @@
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "20.5.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
