--- a/libs/shared/backend/generators/package.json
+++ b/libs/shared/backend/generators/package.json
@@ -6,6 +6,8 @@
   "main": "./src/index.js",
   "types": "./src/index.d.ts",
   "dependencies": {
+    "@nx/devkit": "20.5.0",
     "tslib": "^2.3.0"
-  }
+  },
+  "generators": "./generators.json"
 }
