--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "preinstall": "npx only-allow pnpm",
     "generate": "nx g @template-hex/testgenerator:generator",
     "generatetest": "nx g @template-hex/testgenerator:generator --dry-run",
-    "dockerstart": "docker start backendtm",
+    "dockerstart": "docker start w-backend",
     "run-backend": "pnpm nx serve w-n-backend",
     "run-frontend": "pnpm nx serve frontendtm",
     "build": "pnpm nx build",
     "test": "pnpm nx test",
-    "db:migrate-tm": "pnpm dotenv-flow -p apps/backendtm -- pnpm prisma migrate dev --schema=apps/backendtm/prisma/schema.prisma",
-    "db:deploy-tm": "pnpm dotenv-flow -p apps/backendtm -- pnpm prisma migrate deploy --schema=apps/backendtm/prisma/schema.prisma",
-    "db:generate-tm": "pnpm dotenv-flow -p apps/backendtm -- pnpm prisma generate --schema=apps/backendtm/prisma/schema.prisma"
+    "db:migrate-tm": "pnpm dotenv-flow -p apps/w-n-backend -- pnpm prisma migrate dev --schema=apps/w-n-backend/prisma/schema.prisma",
+    "db:deploy-tm": "pnpm dotenv-flow -p apps/w-n-backend -- pnpm prisma migrate deploy --schema=apps/w-n-backend/prisma/schema.prisma",
+    "db:generate-tm": "pnpm dotenv-flow -p apps/w-n-backend -- pnpm prisma generate --schema=apps/w-n-backend/prisma/schema.prisma"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +22,10 @@
     "@nestjs/platform-express": "^10.0.2",
     "@nrwl/nx-plugin": "^19.8.4",
     "@nx/devkit": "20.5.0",
+    "@prisma/client": "^6.5.0",
+    "@schematics/angular": "^19.2.3",
+    "dotenv-flow": "^4.1.0",
+    "dotenv-flow-cli": "^1.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
   },
@@ -47,11 +51,13 @@
     "@types/node": "~18.16.9",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
+    "inflection": "^3.0.2",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "20.5.0",
     "prettier": "^2.6.2",
+    "prisma": "^6.5.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
