--- a/libs/shared/backend/generators/project.json
+++ b/libs/shared/backend/generators/project.json
@@ -37,5 +37,12 @@
         ]
       }
     }
+  },
+  "test": {
+    "executor": "@nx/jest:jest",
+    "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+    "options": {
+      "jestConfig": "libs/testgenerator/jest.config.ts"
+    }
   }
 }
