[W] init text generic components

--- a/libs/shared/frontend/components/project.json
+++ b/libs/shared/frontend/components/project.json
@@ -2,7 +2,7 @@
   "name": "component",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/shared/frontend/components/src",
-  "prefix": "lib",
+  "prefix": "pd",
   "projectType": "library",
   "tags": [],
   "targets": {
