--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generatetest": "pnpm nx g @portfolio-git-hub-v1/generator:ts-backend-module --dry-run --verbose  ",
     "dockerstart": "docker start w-backend",
     "run-backend": "pnpm nx serve w-n-backend",
-    "run-frontend": "pnpm nx serve frontendtm",
+    "run-frontend": "pnpm nx serve pd-book-frontend",
     "build": "pnpm nx build",
     "test": "pnpm nx test",
     "db:migrate-tm": "pnpm dotenv-flow -p apps/w-n-backend -- pnpm prisma migrate dev --schema=apps/w-n-backend/prisma/schema.prisma",
@@ -54,7 +54,7 @@
     "@nx/nest": "^20.5.0",
     "@nx/node": "^20.5.0",
     "@nx/plugin": "20.5.0",
-    "@nx/web": "20.5.0",
+    "@nx/web": "20.6.0",
     "@nx/webpack": "20.5.0",
     "@nxrocks/nx-spring-boot": "^10.2.6",
     "@schematics/angular": "^19.2.3",
