--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generatetest": "pnpm nx g @portfolio-git-hub-v1/generator:ts-backend-module --dry-run --verbose  ",
     "dockerstart": "docker start w-backend",
     "run-backend": "pnpm nx serve w-n-backend",
-    "run-frontend": "pnpm nx serve frontendtm",
+    "run-frontend": "pnpm nx serve pd-book-frontend",
     "build": "pnpm nx build",
     "test": "pnpm nx test",
     "db:migrate-tm": "pnpm dotenv-flow -p apps/w-n-backend -- pnpm prisma migrate dev --schema=apps/w-n-backend/prisma/schema.prisma",
@@ -17,29 +17,44 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/common": "~19.2.0",
+    "@angular/compiler": "~19.2.0",
+    "@angular/core": "~19.2.0",
+    "@angular/forms": "~19.2.0",
+    "@angular/platform-browser": "~19.2.0",
+    "@angular/platform-browser-dynamic": "~19.2.0",
+    "@angular/router": "~19.2.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "@nrwl/nx-plugin": "^19.8.4",
+    "@nx/angular": "^20.6.0",
     "@nx/devkit": "20.5.0",
     "@prisma/client": "^6.5.0",
     "dotenv-flow": "^4.1.0",
     "dotenv-flow-cli": "^1.1.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~19.2.0",
+    "@angular-devkit/core": "~19.2.0",
+    "@angular-devkit/schematics": "~19.2.0",
+    "@angular/cli": "~19.2.0",
+    "@angular/compiler-cli": "~19.2.0",
+    "@angular/language-service": "~19.2.0",
     "@eslint/js": "^9.8.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
     "@nx/eslint": "20.5.0",
     "@nx/eslint-plugin": "20.5.0",
     "@nx/jest": "20.5.0",
-    "@nx/js": "20.5.0",
+    "@nx/js": "20.6.0",
     "@nx/nest": "^20.5.0",
     "@nx/node": "^20.5.0",
     "@nx/plugin": "20.5.0",
-    "@nx/web": "20.5.0",
+    "@nx/web": "20.6.0",
     "@nx/webpack": "20.5.0",
     "@nxrocks/nx-spring-boot": "^10.2.6",
     "@schematics/angular": "^19.2.3",
@@ -49,11 +64,15 @@
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
+    "@typescript-eslint/utils": "^8.19.0",
+    "angular-eslint": "^19.2.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
     "inflection": "^3.0.2",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
+    "jest-preset-angular": "~14.4.0",
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "20.5.0",
     "prettier": "^2.6.2",
