--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/platform-browser": "~19.2.0",
     "@angular/platform-browser-dynamic": "~19.2.0",
     "@angular/router": "~19.2.0",
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "@nrwl/nx-plugin": "^19.8.4",
@@ -33,6 +35,7 @@
     "@prisma/client": "^6.5.0",
     "dotenv-flow": "^4.1.0",
     "dotenv-flow-cli": "^1.1.1",
+    "nest-keycloak-connect": "^1.10.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "zone.js": "~0.15.0"
