--- a/apps/w-backend/pom.xml
+++ b/apps/w-backend/pom.xml
@@ -31,6 +31,7 @@
 		<lombok.version>1.18.30</lombok.version>
 		<mapstruct.version>1.5.5.Final</mapstruct.version>
 		<spring-boot.version>3.4.3</spring-boot.version>
+		<liquibase.version>4.32.0</liquibase.version>
 	</properties>
 	<dependencies>
 
@@ -64,6 +65,7 @@
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
 			<version>${mapstruct.version}</version>
+			 <scope>provided</scope>
 		</dependency>
 
 		<!-- Annotations -->
@@ -100,15 +102,45 @@
     		<version>${spring-boot.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-core -->
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+			<version>${liquibase.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.liquibase.ext</groupId>
+			<artifactId>liquibase-hibernate6</artifactId>
+			<version>${liquibase.version}</version>
+		</dependency>
+
+
+
+		<!--  Kafka   -->
+		<!-- https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka -->
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+			<version>4.0.0-M2</version>
+		</dependency>		
+		
 	</dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
 				<configuration>
+				    <source>${java.version}</source>
+        			<target>${java.version}</target>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
@@ -122,6 +154,23 @@
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
+			</plugin>
+			<plugin>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-maven-plugin</artifactId>
+			<version>4.32.0</version>
+			<configuration>
+				<changeLogFile>src/main/resources/db/changelog/db.changelog-master.yaml</changeLogFile>
+				<outputChangeLogFile>src/main/resources/db/changelog/V2__create_category_table.yaml</outputChangeLogFile>
+
+				<url>jdbc:postgresql://localhost:5432/w-backend</url>
+				<username>user</username>
+				<password>password</password>
+				<driver>org.postgresql.Driver</driver>
+
+				<!-- Paquete donde están tus entidades -->
+				<referenceUrl>hibernate:spring:com.w_backend.demo?dialect=org.hibernate.dialect.PostgreSQLDialect</referenceUrl>
+			</configuration>
 			</plugin>
 		</plugins>
 	</build>
