--- a/apps/w-backend/src/main/resources/application.yml
+++ b/apps/w-backend/src/main/resources/application.yml
@@ -1,2 +1,25 @@
 server:
   port: 8080
+
+spring:
+  application:
+    name: w-backend
+
+  liquibase:
+    enabled: true
+    change-log: classpath:db/changelog/db.changelog-master.yaml
+
+  profiles:
+    active: dev # Cambia a 'test' o 'prod' según el entorno
+
+  datasource:
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: none
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
