--- a/apps/w-backend/src/main/resources/application-dev.yml
+++ b/apps/w-backend/src/main/resources/application-dev.yml
@@ -9,7 +9,8 @@ spring:
     enabled: true # Habilita Flyway para la migración de base de datos
     locations: classpath:db/migration # Ubicación de los scripts de migración
     baseline-on-migrate: true # Permite que Flyway maneje esquemas existentes
-    baseline-version: 1
+    baseline-description: 'init_schema' # Descripción de la versión base
+    baseline-version: 0
   jpa:
     hibernate:
       ddl-auto: update # Permite actualizaciones automáticas del esquema en desarrollo
