--- a/apps/w-backend/src/main/resources/application.yml
+++ b/apps/w-backend/src/main/resources/application.yml
@@ -1,2 +1,21 @@
 server:
   port: 8080
+
+spring:
+  application:
+    name: w-backend
+
+  profiles:
+    active: dev # Cambia a 'test' o 'prod' según el entorno
+
+  datasource:
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: none # update to local development this will let to hibernate the migrations, none for environments flyway migrations
+    show-sql: true
+    properties:
+      hibernate:
+        '[format_sql]': true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
