--- a/apps/w-backend/src/main/resources/application-dev.yml
+++ b/apps/w-backend/src/main/resources/application-dev.yml
@@ -14,3 +14,6 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update # Permite actualizaciones automáticas del esquema en desarrollo
+  output:
+    ansi:
+      enabled: always # Habilita colores en la salida de la consola
