--- a/.github/workflows/w-backend.yml
+++ b/.github/workflows/w-backend.yml
@@ -38,6 +38,7 @@ jobs:
       - name: Determinar si 'w-backend' fue afectado
         id: check_backend
         run: |
+          set -x
           AFFECTED=$(pnpm nx show projects --affected --base=${{ github.event.pull_request.base.sha }} --head=HEAD)
           echo "AFFECTED: $AFFECTED"
           if echo "$AFFECTED" | grep -qw w-backend; then
