--- a/.github/workflows/w-backend.yml
+++ b/.github/workflows/w-backend.yml
@@ -18,6 +18,13 @@ jobs:
       - name: Checkout código
         uses: actions/checkout@v3
 
+      - name: actions
+        run: echo "Estas en Actions"
+
+      - name: Usar Variables:
+        run: |
+          echo "Test: ${{ secrets.TEST }}"
+
       - name: Configurar Java
         uses: actions/setup-java@v3
         with:
