--- a/.github/workflows/w-backend.yml
+++ b/.github/workflows/w-backend.yml
@@ -45,7 +45,7 @@ jobs:
         id: check
         run: |
           set -x
-          AFFECTED=$( nx show projects --affected --base=${{ github.event.pull_request.base.sha }} --head=HEAD)
+          AFFECTED=$(npx nx show projects --affected --base=${{ github.event.pull_request.base.sha }} --head=HEAD)
           echo "Affected projects: $AFFECTED"
           if echo "$AFFECTED" | grep -qw w-backend; then
             echo "affected_w_backend=true" >> $GITHUB_OUTPUT
