--- a/apps/w-backend/src/main/resources/application-test.yml
+++ b/apps/w-backend/src/main/resources/application-test.yml
@@ -1,9 +1,16 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/miapp_test
-    username: test_user
-    password: test_password
-
+    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+  kafka:
+    bootstrap-servers: localhost:9092
+    listener:
+      missing-topics-fatal: false
   jpa:
     hibernate:
-      ddl-auto: create-drop # Crea y elimina la BD al iniciar/finalizar pruebas
+      ddl-auto: update #create-drop
+    database-platform: org.hibernate.dialect.H2Dialect
+  flyway:
+    enabled: false
