--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,3 +5,8 @@ on:
     branches: [main, develop]
   pull_request:
     branches: ['**']
+
+jobs:
+  check-affected:
+    uses: ./.github/workflows/check-affected.yml
+    secrets: inherit
