--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,6 @@ jobs:
 
   w-backend:
     needs: check-affected
-    if: needs.check-affected.outputs.affected_w_backend == 'true'
+    if: needs.check.outputs.w_backend_affected == 'true'
     uses: ./.github/workflows/w-backend.yml
     secrets: inherit
