--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,13 @@ jobs:
     secrets: inherit
 
   w-backend:
-    needs: check
-    if: needs.check.outputs.w_backend_affected == 'true'
+    needs: check-affected
+    if: needs.check-affected.outputs.w_backend_affected == 'true'
     uses: ./.github/workflows/w-backend.yml
     secrets: inherit
+
+    print-check:
+    needs: check-affected
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "¿W-Backend afectado? ${{ needs.check-affected.outputs.w_backend_affected }}"
