--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
 
   w-backend:
     needs: check-affected
-    if: needs.check-affected.outputs.w_backend_affected == 'true'
+    if: needs.check-affected.outputs.w_backend_affected
     uses: ./.github/workflows/w-backend.yml
     secrets: inherit
 
