--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,6 @@ jobs:
 
   w-backend:
     needs: check-affected
-    if: needs.check-affected.outputs.w_backend_affected
+    if: needs.check-affected.outputs.w_backend_affected == 'true'
     uses: ./.github/workflows/w-backend.yml
     secrets: inherit
