--- a/apps/w-backend/pom.xml
+++ b/apps/w-backend/pom.xml
@@ -33,6 +33,8 @@
 		<spring-boot.version>3.4.6</spring-boot.version>
 		<flyway.version>11.8.2</flyway.version>
 		<postgresql.version> 42.7.5</postgresql.version>
+		<sonar.organization>diegoger222</sonar.organization>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 
