--- a/.github/workflows/w-backend.yml
+++ b/.github/workflows/w-backend.yml
@@ -30,6 +30,8 @@ jobs:
         working-directory: apps/w-backend
         run: mvn test
 
+      # sonarcloud.io analysis
+
       - name: Cache SonarQube packages
         uses: actions/cache@v3
         with:
@@ -43,6 +45,7 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
       - name: Build and analyze
+        working-directory: apps/w-backend
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=diegoger222_portfolio-git-hub-v1_w-backend
