test for sonar generic

--- a/.github/workflows/w-backend.yml
+++ b/.github/workflows/w-backend.yml
@@ -30,22 +30,30 @@ jobs:
         working-directory: apps/w-backend
         run: mvn test
 
-      # sonarcloud.io analysis
+  sonar_analysis:
+    needs: w-backend
+    uses: ./.github/workflows/sonar-java.yml
+    with:
+      java_version: 17
+      project_name: w-backend
+    secrets:
+      inherit
 
-      - name: Cache SonarQube packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-      - name: Cache Maven packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-      - name: Build and analyze
-        working-directory: apps/w-backend
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=diegoger222_portfolio-git-hub-v1_w-backend
+      # sonarcloud.io analysis
+#      - name: Cache SonarQube packages
+#        uses: actions/cache@v3
+#        with:
+#          path: ~/.sonar/cache
+#          key: ${{ runner.os }}-sonar
+#          restore-keys: ${{ runner.os }}-sonar
+#      - name: Cache Maven packages
+#        uses: actions/cache@v3
+#        with:
+#          path: ~/.m2
+#          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+#          restore-keys: ${{ runner.os }}-m2
+#      - name: Build and analyze
+#        working-directory: apps/w-backend
+#        env:
+#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=diegoger222_portfolio-git-hub-v1_w-backend
