--- a/.github/workflows/w-backend.yml
+++ b/.github/workflows/w-backend.yml
@@ -36,6 +36,14 @@ jobs:
     with:
       java_version: 17
       project_name: w-backend
+    secrets: inherit
+
+  dependency_check:
+    needs: w-backend
+    uses: ./.github/workflows/dependency-check-java.yml
+    with:
+      java_version: 17
+      project_name: w-backend
     secrets:
       inherit
 
