--- a/.github/workflows/dependency-check-java.yml
+++ b/.github/workflows/dependency-check-java.yml
@@ -51,4 +51,5 @@ jobs:
       - name: Build
         run: mvn clean install -DskipTests
       - name: Perform CodeQL Analysis
+        working-directory: apps/${{ inputs.project_name }}
         uses: github/codeql-action/analyze@v3
