--- a/.github/workflows/dependency-check-java.yml
+++ b/.github/workflows/dependency-check-java.yml
@@ -60,4 +60,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: codeql-sarif
-          path: /home/runner/work/_temp/codeql_databases/java/results/*.sarif
+          path: '**/*.sarif' # /home/runner/work/_temp/codeql_databases/java/results/*.sarif
