--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ permissions:
 
 jobs:
   check-affected:
+    if: github.actor != 'dependabot[bot]'
     uses: ./.github/workflows/check-affected.yml
     secrets: inherit
 
