--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "@nx/web": "20.6.0",
     "@nx/webpack": "21.3.0",
     "@nxrocks/nx-spring-boot": "^10.2.6",
-    "@schematics/angular": "^19.2.3",
+    "@schematics/angular": "10.2.3",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.3.12",
     "@swc/core": "~1.11.18",
