--- a/package.json
+++ b/package.json
@@ -92,5 +92,20 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0",
     "webpack-cli": "^5.1.4"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@nestjs/core",
+      "@parcel/watcher",
+      "@prisma/client",
+      "@prisma/engines",
+      "@swc/core",
+      "chromedriver",
+      "esbuild",
+      "lmdb",
+      "msgpackr-extract",
+      "nx",
+      "prisma"
+    ]
   }
 }
